--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+.input-filed {
+    @apply shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+}
